--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "guzzlehttp/guzzle": "^6.0",
-        "tightenco/collect": "^5.4"
+        "php": ">=7.2",
+        "guzzlehttp/guzzle": "^6.4",
+        "tightenco/collect": "^6.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0",
-        "laravel/lumen-framework": "5.5.*"
+        "laravel/lumen-framework": "^6.2",
+        "phpunit/phpunit": "^7.5"
     },
     "autoload": {
         "files": [
