--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": ">=7.2",
-        "guzzlehttp/guzzle": "^6.4",
-        "tightenco/collect": "^6.5"
+        "guzzlehttp/guzzle": "^6.4|^7.0.1",
+        "tightenco/collect": "^6.5|^8.34"
     },
     "require-dev": {
         "laravel/lumen-framework": "^6.2",
